test/invalid/nonexistent_module.py
import nonexistent_module_test
